HVAC Backup 2/objects/File_URL__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>File URLs</relationshipLabel>
        <relationshipName>File_URLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>File URLs</relationshipLabel>
        <relationshipName>File_URLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <label>File Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Type_formula__c</fullName>
        <formula>RIGHT(Name, LEN(Name) - FIND(&quot;.&quot;, Name, LEN(Name) - FIND(&quot;.&quot;, REVERSE(Name)) + 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(URL__c , &quot;Alternate Text&quot;, 320, 180)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Purchase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Purchase</label>
        <referenceTo>Local_Purchase__c</referenceTo>
        <relationshipLabel>File URLs</relationshipLabel>
        <relationshipName>File_URLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>File URLs</relationshipLabel>
        <relationshipName>File_URLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>File URLs</relationshipLabel>
        <relationshipName>File_URLs_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return Order</label>
        <referenceTo>ReturnOrder</referenceTo>
        <relationshipLabel>File URLs</relationshipLabel>
        <relationshipName>File_URLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>File Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>File URLs</relationshipLabel>
        <relationshipName>File_URLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>File URL</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Work_Order__c</columns>
        <columns>Return_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>File  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File URLs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>